# o3-deep-research-python-mcp-server

./: .env.example  .gitignore  CLAUDE.md  INSTALLATION_GUIDE.md  LICENSE  Project_Description.md  README.md  README_FULL.md  claude_desktop_config_example.json  claude_desktop_config_windows.json  claude_desktop_config_windows_fixed.json  deep_research_server.py  inspect_tools.py  install.sh  monitor_server.sh  pyproject.toml  requirements-minimal.txt  requirements.txt  run_server.py  run_server.sh  test_client.py  test_mcp_connection.py  test_mcp_only.py  test_server.py
resources/: gemini_thinking.md  grok_heavys_thinking.md  microsoft_docs.md  python-sdk-llm.txt  sample_agents_deep_research_async.py
